# harp

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  DESIGN_CODEGEN.md  DESIGN_RENDERER.md  LICENSE_MIT  README.md  TODO_AUTOGRAD.md  check_pipeline  check_pipeline.rs  debug_graph  debug_graph.rs  pipeline_block_test.txt  test_btreemap_order  test_btreemap_order.rs  test_chain_no_opt  test_chain_no_opt.rs  test_chain_opt  test_chain_opt.rs  test_complex_debug.rs  test_const_lowering.rs  test_const_prop.rs  test_debug.rs  test_local_parallel.rs  test_matmul.rs  test_output_order  test_output_order.rs  test_pipeline  test_pipeline.rs  test_sink_debug.rs  test_sink_src.rs  test_tiling  test_tiling.rs  test_unrolling.rs  test_view_absorption.rs  tiling_check.txt  tmp_pipeline_log.txt
crates/autograd/: Cargo.toml  README.md
crates/autograd/examples/: curve_fitting.rs  mlp_fitting.rs
crates/autograd/src/: arithmetic.rs  differentiable.rs  grad_fns.rs  lib.rs  ndarray_impl.rs  ops.rs  prelude.rs  reduce.rs  shape.rs  traits.rs  variable.rs
crates/autograd/src/hlops/: linalg.rs  mod.rs  transcendental.rs
crates/autograd/src/hlops/arithmetic/: mod.rs
crates/autograd/src/hlops/array/: initialization.rs  mod.rs
crates/autograd/src/hlops/elementwise/: arithmetic.rs  mod.rs
crates/autograd/src/hlops/structural/: linalg.rs  mod.rs
crates/autograd/src/hlops/transcendental/: mod.rs
crates/autograd/src/primops/: arithmetic.rs  cast.rs  linalg.rs  mod.rs  reduce.rs  shape.rs  transcendental.rs
crates/autograd/src/primops/arithmetic/: cast.rs  mod.rs
crates/autograd/src/primops/array/: dim.rs  initialization.rs  linalg.rs  mod.rs  permute.rs  reduce.rs  reshape.rs  shape.rs
crates/autograd/src/primops/elementwise/: mod.rs
crates/autograd/src/primops/structural/: initialization.rs  mod.rs  reshape.rs
crates/autograd/src/primops/transcendental/: mod.rs
crates/autograd/tests/: integration.rs  ndarray_test.rs  scalar.rs
crates/backend-cuda/: Cargo.toml
crates/backend-cuda/src/: buffer.rs  compiler.rs  device.rs  kernel.rs  lib.rs  renderer.rs
crates/cli/: Cargo.toml
crates/cli/examples/: add.ecl  dynamic.ecl  dynamic_matmul.ecl  layer_norm.ecl  layer_norm.harp  matmul.harp  mlp.harp  reduce_ops.harp  softmax.ecl  softmax.harp  subgraph.harp  subgraph_multi_output.harp  view_ops.harp
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/ast/: helper.rs  mod.rs  ops.rs  pat.rs  renderer.rs  types.rs
crates/core/src/ast/tests/: call_return_tests.rs  mod.rs
crates/core/src/backend/: c_like.rs  device.rs  global.rs  mod.rs  pipeline.rs  renderer.rs  sequence.rs  traits.rs
crates/core/src/graph/: hlops.rs  hlops_conv.rs  mod.rs  node_view_ops.rs  ops.rs
crates/core/src/graph/conv/: mod.rs  ops.rs  params.rs
crates/core/src/graph/shape/: expr.rs  tests.rs  view.rs  view_ops.rs
crates/core/src/lowerer/: mod.rs
crates/core/src/opt/: context.rs  log_capture.rs  mod.rs  progress.rs
crates/core/src/opt/ast/: estimator.rs  mod.rs  optimizer.rs  selector.rs  transforms.rs
crates/core/src/opt/ast/optimizer/: beam_search.rs  pruned_dfs.rs
crates/core/src/opt/ast/rules/: algebraic.rs  bit_ops.rs  const_folding.rs  mod.rs
crates/core/src/opt/ast/suggesters/: composite.rs  function_inlining.rs  function_merge.rs  loop_transforms.rs  mod.rs  parallelization.rs  parallelization_common.rs  reduction_tiling.rs  rule_based.rs  variable_expansion.rs  vectorization.rs
crates/core/src/opt/graph/: estimator.rs  factory.rs  mod.rs  optimizer.rs  selector.rs
crates/core/src/opt/graph/suggesters/: buffer_absorption.rs  canonical_form.rs  composite.rs  kernel_merge.rs  kernel_partition.rs  mod.rs  padding_slice.rs  subgraph_inlining.rs  tiling.rs  view_merge.rs
crates/core/src/tensor/: complex.rs  dimension.rs  dtype.rs  forward.rs  fusion.rs  mod.rs  ops.rs  serde.rs  stringify.rs
crates/core/src/tensor/hlops/: activation.rs  arithmetic.rs  complex_arithmetic.rs  complex_transcendental.rs  mod.rs  transcendental.rs
crates/core/src/tensor/hlops/interpolate/: linear.rs  mod.rs  nearest.rs
crates/core/src/tensor/lowerer/: complex.rs  expr_builder.rs  helpers.rs  mod.rs
crates/core/src/tensor/primops/: binary.rs  complex.rs  grad.rs  init.rs  mod.rs  reduce.rs  unary.rs
crates/core/src/tensor/primops/movement/: backward.rs  gather.rs  mod.rs  scatter.rs  tests.rs  (+1 more)
crates/core/src/tensor/shape/: expr.rs  mod.rs  view.rs
crates/core/src/viz/: app.rs  events.rs  mod.rs
crates/core/tests/: conv_test.rs  graph_tests.rs  matmul_demo.rs  program_root_extraction_test.rs  unfold_test.rs
crates/dsl/: Cargo.toml
crates/dsl/examples/: dynamic_matmul.rs
crates/dsl/src/: ast.rs  error.rs  errors.rs  grammar.pest  graph_builder.rs  lib.rs  parser.rs
crates/dsl/src/compiler/: mod.rs  to_graph.rs
crates/dsl/src/decompiler/: from_graph.rs  mod.rs
crates/dsl/src/parser/: ast.rs  mod.rs
crates/harp-cli/: Cargo.toml
crates/harp-cli/examples/: activations.harp  add.harp  fused_ops.harp  layer_norm.harp  matmul.harp  mlp.harp  reduce_ops.harp  softmax.harp  subgraph.harp  subgraph_multi_output.harp  view_ops.harp
crates/harp-cli/src/: main.rs
crates/harp-cli/tests/: examples_compile.rs
crates/lazy-array/: Cargo.toml  README.md
crates/lazy-array/src/: autograd.rs  backend.rs  cache.rs  device.rs  dim.rs  dyn_backend.rs  execution.rs  generators.rs  lib.rs  ops.rs
crates/lazy-array/src/backend/: buffer.rs  constructors.rs  eval.rs  mod.rs
crates/lazy-array/tests/: multiple_constants_test.rs
crates/viz/: Cargo.toml  README.md
crates/viz/examples/: custom_fusion_demo.rs  optimization_demo.rs  pipeline_demo.rs  quick_viz.rs  simd_demo.rs  simple.rs
crates/viz/src/: app.rs  ast_viewer.rs  code_viewer.rs  convert.rs  diff_viewer.rs  events.rs  graph_history.rs  graph_viewer.rs  highlight.rs  lib.rs  perf_viewer.rs  renderer_selector.rs  state.rs  ui.rs
crates/viz/src/panels/: candidates.rs  code_panel.rs  graph_panel.rs  mod.rs  timeline.rs
examples/mnist_cnn/: Cargo.toml
examples/mnist_cnn/src/: main.rs
(+923 files in other folders)
