[workspace]
resolver = "2"
members = ["crates/backend-c", "crates/backend-opencl", "crates/backend-metal", "crates/backend-cuda", "crates/backend-rust", "crates/backend-openmp", "crates/nn", "crates/dsl", "crates/cli"]

[package]
name = "eclat"
version = "0.1.0"
edition = "2024"
description = "Eclat: A transpiler for AI accelerators"

[dependencies]
# Core dependencies
directories = "5"
indicatif = "0.18.1"
indexmap = "2.0"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11"
ndarray = { version = "0.16", features = ["serde"] }
paste = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tempfile = "3.20"
num-traits = "0.2.19"
num-complex = "0.4.6"
half = { version = "2.4", features = ["serde", "num-traits"] }

# Visualization (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
syntect = { version = "5.2", optional = true, default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

[features]
default = []
viz = ["dep:ratatui", "dep:crossterm", "dep:syntect"]

[dev-dependencies]
env_logger = "0.11"
serial_test = "3.2"
rstest = "0.24"

[dev-dependencies.eclat-backend-c]
path = "crates/backend-c"

[target.'cfg(target_os = "macos")'.dev-dependencies]
eclat-backend-metal = { path = "crates/backend-metal" }
