[package]
name = "eclat-backend-cuda"
version = "0.1.0"
edition = "2024"
description = "CUDA backend for Eclat"

[dependencies]
eclat = { path = "../.." }
log = { version = "0.4", features = ["std"] }
tempfile = "3"

# CUDA bindings - optional, requires CUDA SDK
# Enable with: --features cuda-runtime
cudarc = { version = "0.12", default-features = false, features = ["driver", "nvrtc", "cuda-version-from-build-system"], optional = true }

[features]
default = []
# Enable full CUDA runtime support (requires CUDA SDK)
cuda-runtime = ["dep:cudarc"]

[dev-dependencies]
env_logger = "0.11"
