[package]
name = "harp-cli"
version = "0.1.0"
edition = "2024"
description = "Harp DSL Compiler CLI"

[dependencies]
harp = { path = "../.." }
harp-dsl = { path = "../dsl" }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[features]
default = []
opencl = ["harp/opencl"]
metal = ["harp/metal"]

[[bin]]
name = "harpc"
path = "src/main.rs"
