[package]
name = "harp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
indicatif = "0.18.1"
indexmap = "2.0"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11"
ndarray = "0.16"
paste = "1.0"
tempfile = "3.20"

[dev-dependencies]
env_logger = "0.11"
serial_test = "3.2"
rstest = "0.24"
