[package]
name = "harp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
directories = "5"
indicatif = "0.18.1"
indexmap = "2.0"
log = { version = "0.4", features = ["std"] }
env_logger = "0.11"
ndarray = { version = "0.16", features = ["serde"] }
paste = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.20"

# Visualization (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
syntect = { version = "5.2", optional = true, default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

[features]
default = []
viz = ["dep:ratatui", "dep:crossterm", "dep:syntect"]

[dev-dependencies]
env_logger = "0.11"
serial_test = "3.2"
rstest = "0.24"
