[package]
name = "harp-cli"
version = "0.1.0"
edition = "2024"
description = "Harp DSL Compiler CLI"

[dependencies]
harp = { path = "../.." }
harp-dsl = { path = "../dsl" }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[[bin]]
name = "harpc"
path = "src/main.rs"
