[package]
name = "harp-lazy-array"
version = "0.1.0"
edition = "2024"
description = "ndarray/PyTorch-like array API for Harp with lazy evaluation"

[features]
default = []
metal = ["harp-backend-metal"]
opencl = ["harp-backend-opencl"]
autograd = ["dep:harp-autograd"]

[dependencies]
harp-core = { path = "../core" }
harp-dsl = { path = "../dsl" }
harp-backend-opencl = { path = "../backend-opencl", optional = true }
harp-backend-metal = { path = "../backend-metal", optional = true }
harp-autograd = { path = "../autograd", optional = true }
thiserror = "1.0"

[dev-dependencies]
