[package]
name = "harp-viz"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUIフレームワーク
egui = "0.30"
eframe = { version = "0.30", default-features = true }
egui_extras = { version = "0.30", features = ["syntect"] }

# グラフ可視化
egui-snarl = "0.6"
egui_plot = "0.30"

# ユーティリティ
log = "0.4"
similar = "2.4"

# harpへの参照
harp = { path = "../..", features = ["opencl", "metal"] }
harp-dsl = { path = "../dsl" }

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
