[package]
name = "eclat-viz"
version = "0.1.0"
edition = "2024"
description = "Visualization tools for Eclat optimization history"

[dependencies]
eclat = { path = "../.." }
eframe = "0.30"
egui = "0.30"
egui_extras = "0.30"
egui-snarl = "0.6"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
